--- a/src/App.scss
+++ b/src/App.scss
@@ -1,84 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat');
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Montserrat");
 
-body{
-    width: 100%;
-    height: 100%;
+body {
+  width: 100%;
+  height: 100%;
 }
 
+.container-1 {
+  /* Rectangle 1 */
 
-.container-1{
-    /* Rectangle 1 */
+  width: 100%;
+  height: 100vh;
+  background: #edf8f4;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  .logo {
+    /* Allies */
 
-    position: fixed;
-    width: 100%;
-    height: 831px;
-    top: 19px;
-    background: #EDF8F4;
+    position: absolute;
+    width: 70px;
+    height: 27px;
+    left: 101px;
+    top: 10px;
+
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 25px;
+    line-height: 29px;
+
+    color: #000000;
+  }
+  .header {
+    position: absolute;
+    width: 80%;
+    height: 27px;
+    left: 360px;
+    top: inherit;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    .logo{
-        /* Allies */
+    flex-direction: row;
+    align-items: initial;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
 
-        position: absolute;
-        width: 70px;
-        height: 27px;
-        left: 101px;
-        top: 10px;
-
-        font-family: Lato;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 25px;
-        line-height: 29px;
-
-        color: #000000;
-    };
-    .header{
-        position: absolute;
-        width: 80%;
-        height: 27px;
-        left: 360px;
-        top: inherit;
-        display: flex;
-        flex-direction: row;
-        align-items: initial;
-        font-family: Montserrat;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 15px;
-        line-height: 22px;
-
-        color: #000000;
-        .item{
-            position: relative;
-            margin-left: 20px;
-            margin-right: 60px;
-            width: 100%;
-            top: 0;
-        }
-        .login{
-            position: relative;
-            width: 120px;
-            height: 48.98px;
-            right: 0;
-            z-index: 10;
-            
-        }
-
+    color: #000000;
+    .item {
+      position: relative;
+      margin-left: 20px;
+      margin-right: 60px;
+      width: 100%;
+      top: 0;
     }
-    .app-image{
-        position: absolute;
-        display: flex;
-        left: 50%;
-        .app-image1{
-            top: inherit;
-        }
-        .app-image2{
-            position: fixed;
-            right:7%;
-            top: 0;
-        }
+    .login {
+      position: relative;
+      width: 120px;
+      height: 48.98px;
+      right: 0;
+      z-index: 10;
     }
-    
+  }
+  .app-image {
+    position: absolute;
+    display: flex;
+    left: 50%;
+    .app-image1 {
+      top: inherit;
+    }
+    .app-image2 {
+      position: fixed;
+      right: 7%;
+      top: 0;
+    }
+  }
+}
+
+.headerset {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 99;
+  cursor: default;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.logoset {
+  font-size: 2.5rem;
 }
